[package]
name = "platform-mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
ferment-interfaces = { path = "../ferment/ferment-interfaces" }
ferment-macro = { path = "../ferment/ferment-macro" }

platform-value = { path = "../platform/packages/rs-platform-value" }
data-contracts = { path = "../platform/packages/data-contracts" }
dpp = { path = "../platform/packages/rs-dpp" }
rs-sdk = { path = "../platform/packages/rs-sdk" }
#rs-dapi-client = { path = "../platform/packages/rs-dapi-client" }
platform-version = { path = "../platform/packages/rs-platform-version" }
drive-proof-verifier = { path = "../platform/packages/rs-drive-proof-verifier" }
dotenvy = { version = "0.15.7", optional = false }
envy = { version = "0.4.2", optional = false }
lazy_static = "1.4.0"
parking_lot = "0.11.0"

http = { version = "0.2.9" }
tokio = { version = "1.32.0", features = ["macros"] }
tracing-subscriber = { version = "0.3.16" }
tracing = { version = "0.1.37" }
serde = { version = "1.0.152", default-features = false, features = ["rc"] }
hex = "0.4.3"
lru = "0.12.3"

#[build-dependencies]
#cbindgen = "0.26.0"
#ferment = { path = "../ferment/ferment" }
#toml = "0.8.8"

[lib]
name = "platform_mobile"
#crate-type = ["staticlib"]
