[package]
name = "platform-mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
ferment-interfaces = { git = "https://github.com/pankcuf/ferment" }
ferment-macro = { git = "https://github.com/pankcuf/ferment" }

platform-value = { git = "https://github.com/dashpay/platform" }
data-contracts = { git = "https://github.com/dashpay/platform"  }
dpp = { git = "https://github.com/dashpay/platform"  }
dash-sdk = { git = "https://github.com/dashpay/platform"  }
#rs-dapi-client = { path = "../platform/packages/rs-dapi-client" }
platform-version = { git = "https://github.com/dashpay/platform"  }
dapi-grpc = { git = "https://github.com/dashpay/platform"  }
drive-proof-verifier = { git = "https://github.com/dashpay/platform"  }
drive = { git = "https://github.com/dashpay/platform" , default-features = false, features = [
    "verify",
    "serde",
] }
simple-signer = { git = "https://github.com/dashpay/platform"  }
dotenvy = { version = "0.15.7", optional = false }
envy = { version = "0.4.2", optional = false }
lazy_static = "1.4.0"
parking_lot = "0.11.0"

http = { version = "0.2.9" }
tokio = { version = "1.32.0", features = ["macros"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
tracing = { version = "0.1.37" }
serde = { version = "1.0.152", default-features = false, features = ["rc"] }
hex = "0.4.3"
lru = "0.12.3"
quote = "1.0.35"
syn = "2.0.53"
serde_json = "1.0.115"
sha2 = "0.10.8"
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
    "std",
    "secp-recovery",
    "rand",
    "signer",
    "serde",
], default-features = false, branch = "master" }
rand = "0.8.5"

[lib]
name = "platform_mobile"
#crate-type = ["staticlib"]
